# libfec

./: .gitignore  CMakeLists.txt  CMakePresets.json  README  decode_rs_8.c  decode_rs_ccsds.c  encode_rs_8.c  encode_rs_ccsds.c  fec.h  install-config.cmake
libfec/: CMakeLists.txt  decode_rs_8.c  decode_rs_ccsds.c  encode_rs_8.c  encode_rs_ccsds.c  fec.h  fixed.h  tables.c  tables.h
tests/: CMakeLists.txt  decode_rs_ccsds_test.cpp  encode_rs_ccsds_test.cpp
